# example

./: .sun-ci.yml  .technical-stacks.yaml  .technical-stacks.yml  .travis.yml  Cargo.toml  Cartfile  Cartfile.resolved  Jenkinsfile  Package.swift  Pipfile  Podfile  README.md  build.gradle  build.gradle.kts  go.mod  go.sum  nuxt.config.js  package-lock.json  package.json  pom.xml  pubspec.yaml  pyproject.toml  requirements.txt  setup.py
.argo/: app-of-apps.yaml
.circleci/: config.yaml  config.yml
.github/workflows/: build.yml
components/: Notification.vue  TableJob.vue
dart/: pubspec.yaml
kotlin/: build.gradle.kts
middleware/: auth.js
pages/: login.vue  todo.vue
pages/todo/: _id.vue  index.vue
plugins/: axios.js
store/: index.js
swift/: Cartfile
