[package]
name = "my_project"
version = "0.1.0"
edition = "2018"

# Dependencies for the project
[dependencies]
serde = "1.0"
serde_json = "1.0"
reqwest = { version = "0.11", path = "../path/to/my_local_crate" }
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
futures = "0.3"
async-trait = "0.1"
thiserror = "1.0"
regex = "*"
lazy_static = "*"
itertools = "0.10"
clap = { version = "3.0", features = ["derive"] }

# Development dependencies for the project
[dev-dependencies]
rand = "0.8"
tempfile = "3.2"
tokio-test = "0.4"
mockito = "0.30"
assert_cmd = "1.0"
criterion = "0.3"
pretty_assertions = "0.7"
