[tool.poetry]
name = "my_project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "==3.2.5"
flask = ">=2.0.1"
fastapi = "*"
tensorflow = "==2.5.0"
torch = "*"
scikit-learn = "==0.24.2"
keras = ">=2.4.3"
pyqt5 = "==5.15.4"
kivy = "*"
djangorestframework = "==3.12.4"
flask-restful = "*"
pygame = "==2.0.1"
tornado = ">=6.1"
sanic = "*"

[tool.poetry.dev-dependencies]
pytest = ">=6.2.4"
flake8 = "*"
black = "==21.6b0"
mypy = "*"
